--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
             <a href="mailto:keithshep@gmail.com">keithshep@gmail.com</a>
         </div>
 
-        <h2>Thoughts</h2>
+        <h2>Links</h2>
         <div>
             <ul>
             <li>I <a href="http://blog.keithsheppard.name">blog</a> about functional programming and other stuff</li>
-            <li>I have a <a href="http://www.google.com/profiles/keithshep">google profile</a> where I post messages and share some of the gems I find on the web</li>
+            <li><a href="txt-sushi/index.html">txt-sushi</a>: A collection
+            of command line utilities written in haskell for processing
+            flat files (spreadsheets).</li>
+            <li>If you're interested in source code all of
+            <a href="https://github.com/keithshep">my repositories</a> are
+            on github</li>
             </ul>
         </div>
 
-        <h2>Software</h2>
-        <div>
-            <a href="txt-sushi/index.html">TxtSushi</a>: A collection
-            of command line utilities written in haskell for processing
-            flat files (spreadsheets).
-        </div>
-
+        <br/>
+        <div>Thanks to <a href="https://github.com">github</a> for hosting this site and my code repositories.</div>
+        
         <!-- JavaScript for Goolge Analytics -->
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
