--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: keithsheppard.name
 <h1>{{ page.title }}</h1>
 <div>
     This site is about coding and some other things that interest me. I'm
-    <a href="http://twitter.com/#!/keithsheppard">@keithsheppard</a> on twitter
+    <a href="http://twitter.com/#!/keithsheppard">@keithsheppard</a> on twitter,
+    <a href="https://profiles.google.com/keithshep">keithshep</a> on google+
     and you can find <a href="https://github.com/keithshep">my projects</a> on
     github.
 </div>
